src/codegen/snapshots/hebi__codegen__tests__class_with_field_and_closure_method.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
u := 0
class T:
  v = 0
  fn test(self):
    print self.v, u


# Func:
function `T.test` (registers: 3, length: 14, constants: 2)
.code
  0  | load_self
  1  | load_field [0]; v
  3  | store r1
  5  | load_global [1]; u
  7  | store r2
  9  | print_n r1, 2
  12 | load_none
  13 | return


function `main` (registers: 2, length: 14, constants: 3)
.code
  0  | load_smi 0
  2  | store_global [0]; u
  4  | load_smi 0
  6  | store r1
  8  | make_data_class [1], r1; <class `T` descriptor>
  11 | store_global [2]; T
  13 | return



