src/codegen/snapshots/hebi__codegen__tests__fn_in_module.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
value := 100
fn set(v):
  value = v
fn get():
  return value


# Func:
function `set` (registers: 2, length: 6, constants: 0)
.code
  0 | load r1
  2 | store_module_var 0
  4 | load_none
  5 | return



function `get` (registers: 1, length: 5, constants: 0)
.code
  0 | load_module_var 0
  2 | return
  3 | load_none
  4 | return



function `main` (registers: 1, length: 14, constants: 2)
.code
  0  | load_smi 100
  2  | store_module_var 0
  4  | make_fn [0]; <function `set` descriptor>
  6  | store_module_var 1
  8  | make_fn [1]; <function `get` descriptor>
  10 | store_module_var 2
  12 | finalize_module
  13 | return




